--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,24 +2,27 @@
 name = "bot-service"
 version = "0.1.0"
 description = "Telegram bot and Flask-based RAG editor service."
-authors = ["Denis Varekha d.varekha@gmail.com"]
-requires-python = ">=3.13,<4.0"
+authors = [{ name = "Denis Varekha", email = "d.varekha@gmail.com" }]
+requires-python = ">=3.12,<4.0"
+
 dependencies = [
     "python-telegram-bot[job-queue]",
     "python-dotenv",
     "openai==0.28.0",
-    "flask",
-    "flask-cors",
 ]
 
 [project.optional-dependencies]
 dev = [
-    "uv",
-    "ruff",
-    "pyright",
+    "ruff==0.11.13",
 ]
 
 [tool.ruff]
 line-length = 88
-exclude = [".gitignore"]
+target-version = "py312"
 
+[tool.pyright]
+typeCheckingMode = "strict"
+pythonVersion    = "3.12"
+venvPath = "."
+venv     = ".venv"
+include = ["telegram_bot", "tests"]
