--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,10 +9,10 @@ dependencies = [
     "python-telegram-bot[job-queue]",
     "python-dotenv",
     "openai==0.28.0",
-    "sqlalchemy>=2.0,<3.0",
+    # "sqlalchemy>=2.0,<3.0",
 ]
 
-[project.optional-dependencies]
+[dependency-groups]
 dev = [
     "ruff==0.11.13",
 ]
