update: добавлен слой infrastructure/sqlite/models

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,8 @@ dependencies = [
     "python-telegram-bot[job-queue]",
     "python-dotenv",
     "openai==0.28.0",
-    # "sqlalchemy>=2.0,<3.0",
+    "sqlalchemy>=2.0,<3.0",
+    "aiosqlite>=0.17.0,<0.18.0",
 ]
 
 [dependency-groups]
